[package]
name = "n-rt-onl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
n-rt-onl-common = { path = "../n-rt-onl-common", features = ["user"] }
anyhow = "1"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "n-rt-onl"
path = "src/main.rs"
