[package]
name = "n-rt-onl"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "n-rt-onl"
path = "src/bin.rs"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
libc = "0.2"
log = "0.4"
pnet = "0.34"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
fastping-rs = "0.2.4"
