[package]
name = "n-rt-onl"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "n-rt-onl"
path = "src/bin.rs"

[features]
default = ["aya", "aya-log", "libc"]
userspace = ["once_cell"]

[dependencies]
anyhow = "1"
libc = { version = "0.2", optional = true }
log = "0.4"
pnet = "0.34"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = { version = "1.19", optional = true }
fastping-rs = "0.2.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"], rev = "0f6a7343926b23190483bed49855fdc9bb10988d", optional = true }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "0f6a7343926b23190483bed49855fdc9bb10988d", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = { version = "1.19" }