[package]
name = "nrt_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
n-rt-onl = { path = "../n-rt-onl-ebpf/n-rt-onl" }
anyhow = "1"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
